--- a/TimersApp/index.html
+++ b/TimersApp/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
 
     <title>Project Two: Timers</title>
+    <!-- Icon link -->
+    <link rel="icon" type="image/x-icon" href="./Assets/Images/favicon.png">
 
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css"
         integrity="sha512-KXol4x3sVoO+8ZsWPFI/r5KBVB/ssCGB5tsv2nVOKwLg33wTFP3fmnXa47FdSVIshVTgsYk/1734xSk9aFIa4A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,21 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.js"
         integrity="sha512-Xo0Jh8MsOn72LGV8kU5LsclG7SUzJsWGhXbWcYs2MAmChkQzwiW/yTQwdJ8w6UA9C6EVG18GHb/TrYpYCjyAQw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
-
-    <!-- <scriptx src="vendor/uuid.js"></script> -->
-
-    <!-- <script src="vendor/fetch.js"></script> -->
-    <style>
-        .masthead {
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            min-height: 40vh;
-        }
-    </style>
+    <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
 </head>
 
 <body>
