--- a/TimersApp/index.html
+++ b/TimersApp/index.html
@@ -7,12 +7,12 @@
 
     <title>Project Two: Timers</title>
     <!-- Icon link -->
-    <link rel="icon" type="image/x-icon" href="./Assets/Images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="Images/clock.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css"
         integrity="sha512-KXol4x3sVoO+8ZsWPFI/r5KBVB/ssCGB5tsv2nVOKwLg33wTFP3fmnXa47FdSVIshVTgsYk/1734xSk9aFIa4A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./Assets/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
@@ -48,7 +48,7 @@
 
     <!-- <script type="text/babel" src="./js/helpers.js"></script> -->
 
-    <script type="text/babel" data-plugins="transform-class-properties" src="./js/app.js"></script>
+    <script type="text/babel" data-plugins="transform-class-properties" src="js/app.js"></script>
 </body>
 
 </html>
