Added GitPages assets compatibility

--- a/Kittens/index.html
+++ b/Kittens/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
 
     <title>Замурчись</title>
-    <link rel="icon" type="image/x-icon" href="Kittens/assets//images/paw.png">
+    <link rel="icon" type="image/x-icon" href="/Web-Development/Kittens/assets/images/paw.png">
 
 
     <script src="https://kit.fontawesome.com/345af95697.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="Kittens/assets/css/style.css" />
-    <link rel="stylesheet" href="Kittens/assets/css/media-dependent.css" />
+    <link rel="stylesheet" href="/Web-Development/Kittens/assets/css/style.css" />
+    <link rel="stylesheet" href="/Web-Development/Kittens/assets/css/media-dependent.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -83,11 +83,11 @@
                                                 <div class="is-flex is-justify-content-center">
                                                     <a href="https://t.me/Nataliia_Ananchenko"
                                                         class="animate__animated animate_slower animate__rubberBand animate__infinite">
-                                                        <img class="is-rounded mr-5" src="Kittens/assets/images/telegram-pink.png">
+                                                        <img class="is-rounded mr-5" src="/Web-Development/Kittens/assets/images/telegram-pink.png">
                                                     </a>
                                                     <a href="https://t.me/AndrewLick"
                                                         class="animate__animated animate_slower animate__rubberBand animate__infinite">
-                                                        <img class="is-rounded" src="Kittens/assets/images/telegram-icon.png">
+                                                        <img class="is-rounded" src="/Web-Development/Kittens/assets/images/telegram-icon.png">
                                                     </a>
                                                 </div>
                                             </h3>
@@ -120,7 +120,7 @@
                                                 <div class="is-flex is-justify-content-center mt-3">
                                                     <a class="mono_image"
                                                         href="https://send.monobank.ua/jar/3EWKtRtefL">
-                                                        <img src="Kittens/assets/images/mono.png" alt="">
+                                                        <img src="/Web-Development/Kittens/assets/images/mono.png" alt="">
                                                     </a>
                                                 </div>
                                                 <!-- <i class="ml-3 fa-solid fa-hand-holding-dollar"></i> -->
@@ -137,7 +137,7 @@
                                         </div>
                                     </div>
                                     <div class="arrow-image">
-                                        <img src="Kittens/assets/images/supus.png" alt="">
+                                        <img src="/Web-Development/Kittens/assets/images/supus.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -147,7 +147,7 @@
             </nav>
             <div class="main-video">
                 <video id="prime-video" playsinline autoplay muted loop preload="auto">
-                    <source src="Kittens/assets/videos/kits.mov" type="video/mp4">>
+                    <source src="/Web-Development/Kittens/assets/videos/kits.mov" type="video/mp4">>
                 </video>
             </div>
             <div class="hero-body">
@@ -346,11 +346,11 @@
                                         class="food-image-column column is-flex is-two-fifth is-align-items-center is-justify-content-center">
                                         <!-- <figure class="image is-square my-2"> -->
                                         <a href="https://wellfood.kiev.ua/catandkitten/">
-                                            <img id="wellfood-image" src="Kittens/assets/images/kittensration_main.jpeg">
+                                            <img id="wellfood-image" src="/Web-Development/Kittens/assets/images/kittensration_main.jpeg">
                                         </a>
                                         <i id="ration-plus" class="title is-3 fa-solid fa-circle-plus"></i>
                                         <a href="https://schesir.com.ua/wet/cats/tuna-kitten85p">
-                                            <img id="schesir-image" src="Kittens/assets/images/schesirkittens.jpeg" alt="">
+                                            <img id="schesir-image" src="/Web-Development/Kittens/assets/images/schesirkittens.jpeg" alt="">
                                         </a>
                                         <!-- </figure> -->
                                     </div>
@@ -411,7 +411,7 @@
                         <div class="left">
                             <div class="blurable">
                                 <figure class="image">
-                                    <img src="Kittens/assets/images/Kharon/kharon.jpeg">
+                                    <img src="/Web-Development/Kittens/assets/images/Kharon/kharon.jpeg">
                                 </figure>
                                 <article class="message is-info">
                                     <div class="message-body">
@@ -474,22 +474,22 @@
                         <div class="content">
                             <div class="flex-slider">
                                 <a>
-                                    <img src="Kittens/assets/images/Kharon/1.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Kharon/1.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Kharon/2.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Kharon/2.jpeg" alt="" />
                                 </a>
                                 <a class="active">
-                                    <img src="Kittens/assets/images/Kharon/3.jpeg" alt="">
+                                    <img src="/Web-Development/Kittens/assets/images/Kharon/3.jpeg" alt="">
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Kharon/4.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Kharon/4.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Kharon/5.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Kharon/5.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Kharon/6.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Kharon/6.jpeg" alt="" />
                                 </a>
                             </div>
                         </div>
@@ -506,7 +506,7 @@
                         <div class="left">
                             <div class="blurable">
                                 <figure class="image">
-                                    <img src="Kittens/assets/images/Persival/persival.jpeg">
+                                    <img src="/Web-Development/Kittens/assets/images/Persival/persival.jpeg">
                                 </figure>
                                 <article class="message is-warning">
                                     <div class="message-body">
@@ -564,19 +564,19 @@
                         <div class="content">
                             <div class="flex-slider">
                                 <a class="active">
-                                    <img src="Kittens/assets/images/Persival/1.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Persival/1.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Persival/2.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Persival/2.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Persival/3.jpeg" alt="">
+                                    <img src="/Web-Development/Kittens/assets/images/Persival/3.jpeg" alt="">
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Persival/4.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Persival/4.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Persival/5.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Persival/5.jpeg" alt="" />
                                 </a>
                             </div>
                         </div>
@@ -592,7 +592,7 @@
                         <div class="left">
                             <div class="blurable">
                                 <figure class="image">
-                                    <img src="Kittens/assets/images/Grizli/grizli.jpeg">
+                                    <img src="/Web-Development/Kittens/assets/images/Grizli/grizli.jpeg">
                                 </figure>
                                 <article class="message is-success">
                                     <div class="message-body">
@@ -649,19 +649,19 @@
                         <div class="content">
                             <div class="flex-slider">
                                 <a>
-                                    <img src="Kittens/assets/images/Grizli/1.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Grizli/1.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Grizli/2.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Grizli/2.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Grizli/3.jpeg" alt="">
+                                    <img src="/Web-Development/Kittens/assets/images/Grizli/3.jpeg" alt="">
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Grizli/4.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Grizli/4.jpeg" alt="" />
                                 </a>
                                 <a class="active">
-                                    <img src="Kittens/assets/images/Grizli/5.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Grizli/5.jpeg" alt="" />
                                 </a>
                             </div>
                         </div>
@@ -677,7 +677,7 @@
                         <div class="left">
                             <div class="blurable">
                                 <figure class="image">
-                                    <img src="Kittens/assets/images/Emergency/emergency.jpeg">
+                                    <img src="/Web-Development/Kittens/assets/images/Emergency/emergency.jpeg">
                                 </figure>
                                 <article class="message is-primary">
                                     <div class="message-body">
@@ -734,22 +734,22 @@
                         <div class="content">
                             <div class="flex-slider">
                                 <a class="active">
-                                    <img src="Kittens/assets/images/Emergency/1.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Emergency/1.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Emergency/2.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Emergency/2.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Emergency/3.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Emergency/3.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Emergency/4.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Emergency/4.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Emergency/5.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Emergency/5.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Emergency/6.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Emergency/6.jpeg" alt="" />
                                 </a>
                             </div>
                         </div>
@@ -765,7 +765,7 @@
                         <div class="left">
                             <div class="blurable">
                                 <figure class="image">
-                                    <img src="Kittens/assets/images/Cassiopeia/cassiopeia.jpeg">
+                                    <img src="/Web-Development/Kittens/assets/images/Cassiopeia/cassiopeia.jpeg">
                                 </figure>
                                 <article class="message is-danger">
                                     <div class="message-body">
@@ -799,7 +799,7 @@
                                     Майже не хворіла. Потрапила до зграї через злегка мокрі очі, забитий носик і свою
                                     нечувану хоробрість: власнолапно підійшла до нашої
                                     <a
-                                        href="Kittens/assets/images/malamute.jpg" target="_blank">
+                                        href="/Web-Development/Kittens/assets/images/malamute.jpg" target="_blank">
                                         великої собаки</a>, щоб полеститись біля неї. Згодом стала прекрасною заміною
                                     матері для чотирьох менших братиків і сестричок: вилизувала, гріла і навіть
                                     підгрібала за "вбогими" в лоточку.
@@ -823,22 +823,22 @@
                         <div class="content">
                             <div class="flex-slider">
                                 <a>
-                                    <img src="Kittens/assets/images/Cassiopeia/1.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Cassiopeia/1.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Cassiopeia/2.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Cassiopeia/2.jpeg" alt="" />
                                 </a>
                                 <a class="active">
-                                    <img src="Kittens/assets/images/Cassiopeia/3.jpeg" alt="">
+                                    <img src="/Web-Development/Kittens/assets/images/Cassiopeia/3.jpeg" alt="">
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Cassiopeia/4.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Cassiopeia/4.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Cassiopeia/5.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Cassiopeia/5.jpeg" alt="" />
                                 </a>
                                 <a>
-                                    <img src="Kittens/assets/images/Cassiopeia/6.jpeg" alt="" />
+                                    <img src="/Web-Development/Kittens/assets/images/Cassiopeia/6.jpeg" alt="" />
                                 </a>
                             </div>
                         </div>
@@ -853,7 +853,7 @@
     <!-- <script type="text/babel" src="./js/helpers.js"></script> -->
 
     <!-- <script type="text/babel" data-plugins="transform-class-properties" src="js/app.js"></script> -->
-    <script src="Kittens/assets/js/app.js"></script>
+    <script src="/Web-Development/Kittens/assets/js/app.js"></script>
 </body>
 
 </html>
