Fixed image sizes and some content

--- a/Kittens/index.html
+++ b/Kittens/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ua">
+
 <head>
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -83,7 +84,8 @@
                                                 <div class="is-flex is-justify-content-center">
                                                     <a href="https://t.me/Nataliia_Ananchenko"
                                                         class="animate__animated animate_slower animate__rubberBand animate__infinite">
-                                                        <img class="is-rounded mr-5" src="./assets/images/telegram-pink.png">
+                                                        <img class="is-rounded mr-5"
+                                                            src="./assets/images/telegram-pink.png">
                                                     </a>
                                                     <a href="https://t.me/AndrewLick"
                                                         class="animate__animated animate_slower animate__rubberBand animate__infinite">
@@ -174,12 +176,16 @@
                                     <div class="content is-medium">
                                         <p> Прекрасні маленькі котики. Нам невідомо, чи походять вони від єгипетських
                                             фараонів, або чи плавали їхні предки з Магеланом. Що ми знаємо напевне, то
-                                            це що цих красунь і красунчиків одного ранку на парковці нашого будинку, у дуже хворому стані, залишили деякі
+                                            це що цих красунь і красунчиків одного ранку на парковці нашого будинку, у
+                                            дуже хворому стані, залишили деякі
                                             не-поважні представники не-людської раси.
                                             <br>
-                                            Якщо Ви шукаєте тут каракала, "китайську Лі Хуа" чи "котика з Херсону" — вам не сюди.
+                                            Якщо Ви шукаєте тут каракала, "китайську Лі Хуа" чи "котика з Херсону" — вам
+                                            не сюди.
                                             <br>
-                                            Якщо Ви, подібно нам, вважаєте, що любити котика можна незалежно від родослівної, а благородні справи не мають терміну придатності — ласкаво просимо!
+                                            Якщо Ви, подібно нам, вважаєте, що любити котика можна незалежно від
+                                            родослівної, а благородні справи не мають терміну придатності — ласкаво
+                                            просимо!
                                         </p>
                                     </div>
                                 </article>
@@ -192,19 +198,10 @@
                                             Ми не мали досвіду з хворобами кошеняток, тому відразу віднесли їх
                                             на огляд. Оченятка пухликів були запливші і хворобливі, малюки чхали. Лікарі
                                             визначили це як «вірусний ринотрахеїт» і почалось лікування:
-                                            нескінченні
-                                            промивання, крапельки в очі і носик, суспензії, смачна якісна поживна їжа і
-                                            багато
-                                            любові. За кілька днів Касі та Грізлі повернулися до здорового життя. Іншим
-                                            пощастило менше. Персиваль бореться з ерозією рогівки, динаміка позитивна.
-                                            Емердженсі проживає важке запалення оболонок оченятка, старається і має
-                                            значний
-                                            прогрес. Харончик, на жаль, має випадіння райдужки і оченятко врятувати вже
-                                            практично неможливо. Маю сказати, усі дуже мужньо проходять усі процедури. І
-                                            разом з
-                                            цим усим вони нескінченно життєрадісні, люблячі і активні кошенятка! Ніби
-                                            цих
-                                            проблем і немає. Пишаємось ними.
+                                            нескінченні промивання, крапельки в очі і носик, суспензії, смачна якісна поживна їжа і
+                                            багато любові. Маю сказати, усі дуже мужньо проходять усі процедури. І
+                                            разом з цим усим вони нескінченно життєрадісні, люблячі і активні кошенятка! Ніби
+                                            цих проблем і немає. Пишаємось ними.
                                         </p>
                                     </div>
                                 </article>
@@ -606,7 +603,7 @@
                                             <h5 class="subtitle is-5 mb-1">
                                                 <i><strong>Муркуватість:</strong></i>
                                             </h5>
-                                            <progress class="progress is-success mx-4" value="60" max="100"></progress>
+                                            <progress class="progress is-success mx-4" value="80" max="100"></progress>
                                         </div>
                                         <br>
                                         <p>Світ сам себе не дослідить.</p>
@@ -705,12 +702,16 @@
                                 <h1>
                                     Мейвуська. Киця, яка першим у житті пізнала самотність і страх. На жаль, її історія
                                     достеменно не відома: лише той факт, що два дні вона галасливо і боязко мʼявкала
-                                    з-під
-                                    авто. Через це її довіру дійсно важко заслужити.
+                                    з-під авто. Через це її довіру дійсно важко заслужити.
                                     <br>
                                     Однак не думайте, що вона того не варта: момент, коли вона вам довіриться, ви дійно
                                     запамʼятаєте. Карамельно солоденька дівчинка. Дуже характерна, якщо
                                     бути власним і грубим, але пухкенька і добра, якщо мати повагу.
+                                    <br>
+                                    Щодо хвороби, то вона отримала від життя одне оченятко з дуже запаленими повіками
+                                    (їх у котиків три). Станом на
+                                    момент написання, вона ще не зцілилася на всі 100, але динаміка виключно позитивна і
+                                    радше за все оченятко буде в повному порядку.
                                     <br>
                                     Вона має свою думку, любить ховатися за пазухою і
                                     ловити там сновидіння, а також потягунькуватись після сну. Не дозволить вам просто
@@ -769,7 +770,7 @@
                                 </figure>
                                 <article class="message is-danger">
                                     <div class="message-body">
-                                        <h4 class="title is-4 is-spaced"><strong>Імʼя:</strong> Кассіопея ✨</h4>
+                                        <h4 class="title is-4 is-spaced"><strong>Імʼя:</strong> Касіопея ✨</h4>
                                         <h5 class="subtitle is-5 mb-1"><i><strong>Вік:</strong> Два-три місяці</i></h5>
                                         <h5 class="subtitle is-5 mb-1"><i><strong>Позивний:</strong> "Киця", "Кіса",
                                                 "Кицюня".</i></h5>
@@ -798,8 +799,7 @@
                                     <br>
                                     Майже не хворіла. Потрапила до зграї через злегка мокрі очі, забитий носик і свою
                                     нечувану хоробрість: власнолапно підійшла до нашої
-                                    <a
-                                        href="./assets/images/malamute.jpg" target="_blank">
+                                    <a href="./assets/images/malamute.jpg" target="_blank">
                                         великої собаки</a>, щоб полеститись біля неї. Згодом стала прекрасною заміною
                                     матері для чотирьох менших братиків і сестричок: вилизувала, гріла і навіть
                                     підгрібала за "вбогими" в лоточку.
