--- a/Kittens/index.html
+++ b/Kittens/index.html
@@ -678,7 +678,7 @@
                                 </figure>
                                 <article class="message is-primary">
                                     <div class="message-body">
-                                        <h4 class="title is-4 is-spaced"><strong>Імʼя:</strong> Емердженсі</h4>
+                                        <h4 class="title is-4 is-spaced"><strong>Імʼя:</strong> Емердженсі ⛑️</h4>
                                         <h5 class="subtitle is-5 mb-1"><i><strong>Вік:</strong> Близько двох місяців</i>
                                         </h5>
                                         <h5 class="subtitle is-5 mb-1"><i><strong>Позивний:</strong> "Мей", "Мев",
