Changed navigation fonts for mobile version, changed background on a button, speeded up gallery timing

--- a/Kittens/index.html
+++ b/Kittens/index.html
@@ -93,7 +93,7 @@
                                                     </a>
                                                 </div>
                                             </h3>
-                                            <p class="is-size-7 has-text-justified">
+                                            <p class="has-text-justified">
                                                 Від неперевершеної пригоди тривалістю в пухкеньке життя Вас відділяють
                                                 лише два стрибаючі телеграм-значки.
                                                 <br>
@@ -107,7 +107,7 @@
                             <div class="navbar-item">
                                 <div class="relative">
                                     <div class="message is-info no-margin">
-                                        <div id="support" class="message-header has-text-grey-darker">
+                                        <div id="support" class="message-header has-background-danger has-text-grey-darker">
                                             Не можеш закошенятитись? 😔
                                         </div>
                                         <div class="message-body additional-info">
@@ -127,7 +127,7 @@
                                                 </div>
                                                 <!-- <i class="ml-3 fa-solid fa-hand-holding-dollar"></i> -->
                                             </h3>
-                                            <p class="is-size-7 has-text-justified">
+                                            <p class="has-text-justified">
                                                 Кошенята — не Сили Оборони, але також потребують Вашої допомоги. Проте
                                                 зауважте, що половину будь-якої суми, яку Ви готові подарувати
                                                 хвостеняткам на ласощі, ми радимо надіслати на допомогу Воїнам України.
@@ -773,7 +773,7 @@
                                         <h4 class="title is-4 is-spaced"><strong>Імʼя:</strong> Касіопея ✨</h4>
                                         <h5 class="subtitle is-5 mb-1"><i><strong>Вік:</strong> Два-три місяці</i></h5>
                                         <h5 class="subtitle is-5 mb-1"><i><strong>Позивний:</strong> "Киця", "Кіса",
-                                                "Кицюня".</i></h5>
+                                                "Кицюня", "Тєрорістка".</i></h5>
                                         <div class="with-progress">
                                             <h5 class="subtitle is-5 mb-1">
                                                 <i><strong>Муркуватість:</strong></i>
