Added OpegGraph support

--- a/Kittens/index.html
+++ b/Kittens/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="ua">
 
-<head>
+<head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Замурчись">
+    <meta property="og:description" content="Покажи котику, що значить бути Людиною">
+    <meta property="og:image" content="./assets/images/catty_og.webp">
 
     <title>Замурчись</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/paw.png">
@@ -107,7 +111,8 @@
                             <div class="navbar-item">
                                 <div class="relative">
                                     <div class="message is-info no-margin">
-                                        <div id="support" class="message-header has-background-danger has-text-grey-darker">
+                                        <div id="support"
+                                            class="message-header has-background-danger has-text-grey-darker">
                                             Не можеш закошенятитись? 😔
                                         </div>
                                         <div class="message-body additional-info">
@@ -198,9 +203,11 @@
                                             Ми не мали досвіду з хворобами кошеняток, тому відразу віднесли їх
                                             на огляд. Оченятка пухликів були запливші і хворобливі, малюки чхали. Лікарі
                                             визначили це як «вірусний ринотрахеїт» і почалось лікування:
-                                            нескінченні промивання, крапельки в очі і носик, суспензії, смачна якісна поживна їжа і
+                                            нескінченні промивання, крапельки в очі і носик, суспензії, смачна якісна
+                                            поживна їжа і
                                             багато любові. Маю сказати, усі дуже мужньо проходять усі процедури. І
-                                            разом з цим усим вони нескінченно життєрадісні, люблячі і активні кошенятка! Ніби
+                                            разом з цим усим вони нескінченно життєрадісні, люблячі і активні кошенятка!
+                                            Ніби
                                             цих проблем і немає. Пишаємось ними.
                                         </p>
                                     </div>
