--- a/Kittens/index.html
+++ b/Kittens/index.html
@@ -2,6 +2,14 @@
 <html lang="ua">
 
 <head prefix="og: http://ogp.me/ns#">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8D6M5MHWP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-P8D6M5MHWP');
+    </script>
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
